@@ -1,8 +1,6 @@
-import org.vaadin.sbt.VaadinPlugin._
+name := "vaadin-ckeditor"
 
-name := "Vaadin CkEditor"
-
-version in ThisBuild := "1.0-SNAPSHOT"
+version in ThisBuild := "1.0"
 
 organization in ThisBuild := "com.github.ilgun"
 
@@ -10,39 +8,63 @@ crossPaths in ThisBuild := false
 
 autoScalaLibrary in ThisBuild := false
 
-isSnapshot in ThisBuild := true
+isSnapshot in ThisBuild := false
 
 javacOptions in ThisBuild ++= Seq("-source", "1.8", "-target", "1.8")
-lazy val root = project.in(file(".")).aggregate(addon)
 
-lazy val addon = project.settings(vaadinAddOnSettings: _*).settings(
-  name := "vaadin-ckeditor",
-  libraryDependencies := Dependencies.addonDeps,
-  // Javadoc generation causes problems so disabling it for now
-  mappings in packageVaadinDirectoryZip <<= (packageSrc in Compile) map {
-    (src) => Seq((src, src.name))
-  },
-  javaOptions in compileVaadinWidgetsets := Seq("-Xss8M", "-Xmx512M", "-XX:MaxPermSize=512M"),
-  vaadinOptions in compileVaadinWidgetsets := Seq("-strict", "-draftCompile"),
-  skip in compileVaadinWidgetsets in resourceGenerators := true,
-  sources in doc in Compile := List()
-)
+sources in doc in Compile := List()
 
-homepage := Some(url("https://github.com/ilgun/vaadin-ckeditor"))
-scmInfo := Some(ScmInfo(url("https://github.com/ilgun/vaadin-ckeditor"),
-  "scm:git@github.com:ilgun/vaadin-ckeditor.git"))
-developers := List(Developer("ilgun", "Ilgun Ilgun", "ilgun.ilgun@gmail.com",
-  url("https://github.com/ilgun")))
-licenses += ("Apache-2.0", url("http://www.apache.org/licenses/LICENSE-2.0"))
-pomIncludeRepository := (_ => false)
-
-publishTo := {
-  val nexus = "https://oss.sonatype.org/"
-  if (isSnapshot.value)
-    Some("snapshots" at nexus + "content/repositories/snapshots")
-  else
-    Some("releases" at nexus + "service/local/staging/deploy/maven2")
-}
+sonatypeProfileName in ThisBuild := "com.github.ilgun"
 
 useGpg in ThisBuild := true
-pgpReadOnly in ThisBuild := false
+
+def publishSettings: Seq[Setting[_]] = Seq(
+  publishMavenStyle in ThisBuild := true,
+  publishArtifact in Test := false,
+
+  publishTo in ThisBuild := {
+    val nexus = "https://oss.sonatype.org/"
+    if (version.value.trim.endsWith("SNAPSHOT"))
+      Some("snapshots" at nexus + "content/repositories/snapshots")
+    else
+      Some("releases" at nexus + "service/local/staging/deploy/maven2")
+  },
+
+  // Maven central cannot allow other repos.  We're ok here because the artifacts we
+  // we use externally are *optional* dependencies.
+  pomIncludeRepository in ThisBuild := { x => false }
+)
+
+pomExtra in ThisBuild := <url>https://github.com/ilgun/vaadin-ckeditor</url>
+  <licenses>
+    <license>
+      <name>Apache-2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+  <scm>
+    <url>https://github.com/ilgun/vaadin-ckeditor</url>
+    <connection>scm:git@github.com:ilgun/vaadin-ckeditor.git</connection>
+  </scm>
+  <developers>
+    <developer>
+      <id>ilgun</id>
+      <name>Ilgun Ilgun</name>
+      <url>https://github.com/ilgun</url>
+    </developer>
+  </developers>
+
+val vaadinVersion = "8.1.1"
+libraryDependencies ++= Seq(
+  "com.vaadin" % "vaadin-server" % vaadinVersion,
+  "com.vaadin" % "vaadin-client" % vaadinVersion,
+
+  "com.vaadin" % "vaadin-compatibility-client" % vaadinVersion,
+  "com.vaadin" % "vaadin-compatibility-server" % vaadinVersion,
+
+  "com.vaadin" % "vaadin-client-compiler" % vaadinVersion,
+  "com.vaadin" % "vaadin-compatibility-client-compiled" % vaadinVersion,
+
+  "com.vaadin" % "vaadin-compatibility-themes" % vaadinVersion
+)
